hw2: second attempt has been done